--- a/src/components/RepoCard/index.module.css
+++ b/src/components/RepoCard/index.module.css
@@ -3,6 +3,12 @@
     margin: 0 10px 0;
     padding: 20px;
     line-height: 1em;
+    margin: 10px 10px 0;
+}
+
+.card:hover {
+    box-shadow: 8px 8px 8px grey;
+    transform: scale(1.01);
 }
 
 .repoName {
